Restore port validation by defining PortNumber types in v1alpha1
  Addresses reviewers feedback by moving validation to the type level.
  Creates StatusPortNumber for status fields requiring valid ports (1-65535).

Signed-off-by: Killian Golds <kgolds@redhat.com>

--- a/config/crd/experimental/gateway.networking.x-k8s.io_xlistenersets.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_xlistenersets.yaml
@@ -306,6 +306,8 @@ spec:
                         assignment, it MUST set `Accepted` condition to `False` with the
                         `UnsupportedPort` reason.
                       format: int32
+                      maximum: 65535
+                      minimum: 0
                       type: integer
                     protocol:
                       description: Protocol specifies the network protocol this listener
@@ -721,6 +723,8 @@ spec:
                       description: Port is the network port the listener is configured
                         to listen on.
                       format: int32
+                      maximum: 65535
+                      minimum: 1
                       type: integer
                     supportedKinds:
                       description: |-
