--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -899,6 +899,25 @@ spec:
                 maxItems: 16
                 type: array
                 x-kubernetes-list-type: atomic
+              attachedListeners:
+                description: |-
+                  AttachedListeners represents the total number of ListenerSets that have been
+                  successfully attached to this Gateway.
+
+                  Successful attachment of a ListenerSets to a Gateway is based solely on the
+                  combination of the AllowedListeners field on the Gateway
+                  and the ListenerSets's ParentRefs field. A ListenerSets is successfully attached to
+                  a Gateway when it is selected by the ListenerSets's AllowedListeners field
+                  AND the ListenerSets has a valid ParentRef selecting the Gateway
+                  resource as a parent resource. ListenerSets status does not impact
+                  successful attachment, i.e. the AttachedListeners field count MUST be set
+                  for ListenerSets with condition Accepted: false and MUST count successfully
+                  attached AttachedListeners that may themselves have Accepted: false conditions.
+
+                  Uses for this field include troubleshooting AttachedListeners attachment and
+                  measuring blast radius/impact of changes to a Gateway.
+                format: int32
+                type: integer
               conditions:
                 default:
                 - lastTransitionTime: "1970-01-01T00:00:00Z"
@@ -1124,6 +1143,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+            required:
+            - attachedListeners
             type: object
         required:
         - spec
@@ -2012,6 +2033,25 @@ spec:
                 maxItems: 16
                 type: array
                 x-kubernetes-list-type: atomic
+              attachedListeners:
+                description: |-
+                  AttachedListeners represents the total number of ListenerSets that have been
+                  successfully attached to this Gateway.
+
+                  Successful attachment of a ListenerSets to a Gateway is based solely on the
+                  combination of the AllowedListeners field on the Gateway
+                  and the ListenerSets's ParentRefs field. A ListenerSets is successfully attached to
+                  a Gateway when it is selected by the ListenerSets's AllowedListeners field
+                  AND the ListenerSets has a valid ParentRef selecting the Gateway
+                  resource as a parent resource. ListenerSets status does not impact
+                  successful attachment, i.e. the AttachedListeners field count MUST be set
+                  for ListenerSets with condition Accepted: false and MUST count successfully
+                  attached AttachedListeners that may themselves have Accepted: false conditions.
+
+                  Uses for this field include troubleshooting AttachedListeners attachment and
+                  measuring blast radius/impact of changes to a Gateway.
+                format: int32
+                type: integer
               conditions:
                 default:
                 - lastTransitionTime: "1970-01-01T00:00:00Z"
@@ -2237,6 +2277,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+            required:
+            - attachedListeners
             type: object
         required:
         - spec
