Fix the missing date in Traefik Proxy conformance report

--- a/conformance/reports/v1.4.0/traefik-traefik/experimental-v3.6.0-default-report.yaml
+++ b/conformance/reports/v1.4.0/traefik-traefik/experimental-v3.6.0-default-report.yaml
@@ -1,5 +1,5 @@
 apiVersion: gateway.networking.k8s.io/v1
-date: '-'
+date: "2025-10-31T09:44:43+01:00"
 gatewayAPIChannel: experimental
 gatewayAPIVersion: v1.4.0
 implementation:
