--- a/nav.yml
+++ b/nav.yml
@@ -57,8 +57,8 @@ nav:
       - ReferenceGrant: api-types/referencegrant.md
     - API specification:
       - Development:
-        - Standard: reference/main/spec.md
-        - Experimental: reference/main/specx.md
+        - Standard: reference/spec.md
+        - Experimental: reference/specx.md
       - v1.4:
         - Standard: reference/1.4/spec.md
         - Experimental: reference/1.4/specx.md
