--- a/conformance/base/manifests.yaml
+++ b/conformance/base/manifests.yaml
@@ -704,7 +704,7 @@ spec:
       - args:
         - -conf
         - /root/Corefile
-        image: coredns/coredns
+        image: k8s.gcr.io/coredns/coredns:v1.13.1
         name: coredns
         securityContext:
           allowPrivilegeEscalation: false
