rerun with skipped tests->disabled features
Signed-off-by: Sunjay Bhatia <sunjay.bhatia@broadcom.com>

--- a/conformance/reports/v1.3.0/projectcontour-contour/experimental-v1.33.0-default-report.yaml
+++ b/conformance/reports/v1.3.0/projectcontour-contour/experimental-v1.33.0-default-report.yaml
@@ -1,5 +1,5 @@
 apiVersion: gateway.networking.k8s.io/v1
-date: "2025-09-09T14:48:38Z"
+date: "2025-11-13T13:49:19-05:00"
 gatewayAPIChannel: experimental
 gatewayAPIVersion: v1.3.0
 implementation:
@@ -16,46 +16,23 @@ profiles:
     result: success
     statistics:
       Failed: 0
-      Passed: 11
-      Skipped: 0
-  extended:
-    result: partial
-    skippedTests:
-    - GatewayStaticAddresses
-    statistics:
-      Failed: 0
-      Passed: 1
-      Skipped: 1
-    supportedFeatures:
-    - GatewayAddressEmpty
-    - GatewayHTTPListenerIsolation
-    - GatewayInfrastructurePropagation
-    - GatewayPort8080
-    - GatewayStaticAddresses
-  name: GATEWAY-TLS
-  summary: Core tests succeeded. Extended tests partially succeeded with 1 test skips.
-- core:
-    result: success
-    statistics:
-      Failed: 0
       Passed: 12
       Skipped: 0
   extended:
-    result: partial
-    skippedTests:
-    - GatewayStaticAddresses
+    result: success
     statistics:
       Failed: 0
       Passed: 1
-      Skipped: 1
+      Skipped: 0
     supportedFeatures:
     - GatewayAddressEmpty
     - GatewayHTTPListenerIsolation
     - GatewayInfrastructurePropagation
     - GatewayPort8080
+    unsupportedFeatures:
     - GatewayStaticAddresses
   name: GATEWAY-GRPC
-  summary: Core tests succeeded. Extended tests partially succeeded with 1 test skips.
+  summary: Core tests succeeded. Extended tests succeeded.
 - core:
     result: partial
     skippedTests:
@@ -65,21 +42,16 @@ profiles:
       Passed: 32
       Skipped: 1
   extended:
-    result: partial
-    skippedTests:
-    - GatewayStaticAddresses
-    - HTTPRouteInvalidParentRefSectionNameNotMatchingPort
-    - HTTPRouteRedirectPortAndScheme
+    result: success
     statistics:
       Failed: 0
-      Passed: 21
-      Skipped: 3
+      Passed: 19
+      Skipped: 0
     supportedFeatures:
     - GatewayAddressEmpty
     - GatewayHTTPListenerIsolation
     - GatewayInfrastructurePropagation
     - GatewayPort8080
-    - GatewayStaticAddresses
     - HTTPRouteBackendProtocolH2C
     - HTTPRouteBackendProtocolWebSocket
     - HTTPRouteBackendRequestHeaderModification
@@ -87,10 +59,8 @@ profiles:
     - HTTPRouteDestinationPortMatching
     - HTTPRouteHostRewrite
     - HTTPRouteMethodMatching
-    - HTTPRouteParentRefPort
     - HTTPRoutePathRedirect
     - HTTPRoutePathRewrite
-    - HTTPRoutePortRedirect
     - HTTPRouteQueryParamMatching
     - HTTPRouteRequestMirror
     - HTTPRouteRequestMultipleMirrors
@@ -98,9 +68,32 @@ profiles:
     - HTTPRouteResponseHeaderModification
     - HTTPRouteSchemeRedirect
     unsupportedFeatures:
+    - GatewayStaticAddresses
+    - HTTPRouteParentRefPort
+    - HTTPRoutePortRedirect
     - HTTPRouteRequestPercentageMirror
   name: GATEWAY-HTTP
-  summary: Core tests partially succeeded with 1 test skips. Extended tests partially
-    succeeded with 3 test skips.
+  summary: Core tests partially succeeded with 1 test skips. Extended tests succeeded.
+- core:
+    result: success
+    statistics:
+      Failed: 0
+      Passed: 11
+      Skipped: 0
+  extended:
+    result: success
+    statistics:
+      Failed: 0
+      Passed: 1
+      Skipped: 0
+    supportedFeatures:
+    - GatewayAddressEmpty
+    - GatewayHTTPListenerIsolation
+    - GatewayInfrastructurePropagation
+    - GatewayPort8080
+    unsupportedFeatures:
+    - GatewayStaticAddresses
+  name: GATEWAY-TLS
+  summary: Core tests succeeded. Extended tests succeeded.
 succeededProvisionalTests:
 - GatewayInfrastructure
