update envoy gateway conformance report

--- a/conformance/reports/v1.4.0/envoy-gateway/experimental-v1.6.0-default-report.yaml
+++ b/conformance/reports/v1.4.0/envoy-gateway/experimental-v1.6.0-default-report.yaml
@@ -1,5 +1,5 @@
 apiVersion: gateway.networking.k8s.io/v1
-date: "2025-10-31T17:36:03Z"
+date: "2025-11-11T06:59:27Z"
 gatewayAPIChannel: experimental
 gatewayAPIVersion: v1.4.0
 implementation:
@@ -8,7 +8,7 @@ implementation:
   organization: envoyproxy
   project: envoy-gateway
   url: https://github.com/envoyproxy/gateway
-  version: v1.6.0-rc.1
+  version: v1.6.0
 kind: ConformanceReport
 mode: default
 profiles:
