--- a/nav.yml
+++ b/nav.yml
@@ -72,6 +72,7 @@ nav:
       - geps/gep-1494/index.md
       - geps/gep-3793/index.md
       - geps/gep-3949/index.md
+      - geps/gep-3779/index.md
     - Experimental:
       - geps/gep-91/index.md
       - geps/gep-1619/index.md
