--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
     - navigation.top
     - navigation.expand
     - toc.integrate
+    - content.tabs.link
   palette:
     - scheme: default
       primary: custom
@@ -75,6 +76,8 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
   - toc:
       permalink: true
   - tables
