spelling: to which the client submits requests
Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -43,7 +43,7 @@ spec:
           kind:
             description: |-
               Kind is a string value representing the REST resource this object represents.
-              Servers may infer this from the endpoint the client submits requests to.
+              Servers may infer this from the endpoint to which the client submits requests.
               Cannot be updated.
               In CamelCase.
               More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
@@ -4249,7 +4249,7 @@ spec:
           kind:
             description: |-
               Kind is a string value representing the REST resource this object represents.
-              Servers may infer this from the endpoint the client submits requests to.
+              Servers may infer this from the endpoint to which the client submits requests.
               Cannot be updated.
               In CamelCase.
               More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
