--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -3784,7 +3784,7 @@ spec:
                           default: Cookie
                           description: |-
                             Type defines the type of session persistence such as through
-                            the use a header or cookie. Defaults to cookie based session
+                            the use of a header or cookie. Defaults to cookie based session
                             persistence.
 
                             Support: Core for "Cookie" type
@@ -7990,7 +7990,7 @@ spec:
                           default: Cookie
                           description: |-
                             Type defines the type of session persistence such as through
-                            the use a header or cookie. Defaults to cookie based session
+                            the use of a header or cookie. Defaults to cookie based session
                             persistence.
 
                             Support: Core for "Cookie" type
