--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -3650,7 +3650,7 @@ spec:
                             For example, setting the `rules[].retry.backoff` field to the value
                             `100ms` will cause a backend request to first be retried approximately
                             100 milliseconds after timing out or receiving a response code configured
-                            to be retryable.
+                            to be retriable.
 
                             An implementation MAY use an exponential or alternative backoff strategy
                             for subsequent retry attempts, MAY cap the maximum backoff duration to
@@ -3693,7 +3693,7 @@ spec:
                               HTTPRouteRetryStatusCode defines an HTTP response status code for
                               which a backend request should be retried.
 
-                              Implementations MUST support the following status codes as retryable:
+                              Implementations MUST support the following status codes as retriable:
 
                               * 500
                               * 502
@@ -7856,7 +7856,7 @@ spec:
                             For example, setting the `rules[].retry.backoff` field to the value
                             `100ms` will cause a backend request to first be retried approximately
                             100 milliseconds after timing out or receiving a response code configured
-                            to be retryable.
+                            to be retriable.
 
                             An implementation MAY use an exponential or alternative backoff strategy
                             for subsequent retry attempts, MAY cap the maximum backoff duration to
@@ -7899,7 +7899,7 @@ spec:
                               HTTPRouteRetryStatusCode defines an HTTP response status code for
                               which a backend request should be retried.
 
-                              Implementations MUST support the following status codes as retryable:
+                              Implementations MUST support the following status codes as retriable:
 
                               * 500
                               * 502
