spelling: case-sensitive
Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -483,7 +483,7 @@ spec:
                                         AllowHeaders indicates which HTTP request headers are supported for
                                         accessing the requested resource.
 
-                                        Header names are not case sensitive.
+                                        Header names are not case-sensitive.
 
                                         Multiple header names in the value of the `Access-Control-Allow-Headers`
                                         response header are separated by a comma (",").
@@ -545,7 +545,7 @@ spec:
                                         Valid values are any method defined by RFC9110, along with the special
                                         value `*`, which represents all HTTP methods are allowed.
 
-                                        Method names are case sensitive, so these values are also case-sensitive.
+                                        Method names are case-sensitive, so these values are also case-sensitive.
                                         (See https://www.rfc-editor.org/rfc/rfc2616#section-5.1.1)
 
                                         Multiple method names in the value of the `Access-Control-Allow-Methods`
@@ -694,7 +694,7 @@ spec:
                                         this additional header will be exposed as part of the response to the
                                         client.
 
-                                        Header names are not case sensitive.
+                                        Header names are not case-sensitive.
 
                                         Multiple header names in the value of the `Access-Control-Expose-Headers`
                                         response header are separated by a comma (",").
@@ -1985,7 +1985,7 @@ spec:
                                   AllowHeaders indicates which HTTP request headers are supported for
                                   accessing the requested resource.
 
-                                  Header names are not case sensitive.
+                                  Header names are not case-sensitive.
 
                                   Multiple header names in the value of the `Access-Control-Allow-Headers`
                                   response header are separated by a comma (",").
@@ -2047,7 +2047,7 @@ spec:
                                   Valid values are any method defined by RFC9110, along with the special
                                   value `*`, which represents all HTTP methods are allowed.
 
-                                  Method names are case sensitive, so these values are also case-sensitive.
+                                  Method names are case-sensitive, so these values are also case-sensitive.
                                   (See https://www.rfc-editor.org/rfc/rfc2616#section-5.1.1)
 
                                   Multiple method names in the value of the `Access-Control-Allow-Methods`
@@ -2196,7 +2196,7 @@ spec:
                                   this additional header will be exposed as part of the response to the
                                   client.
 
-                                  Header names are not case sensitive.
+                                  Header names are not case-sensitive.
 
                                   Multiple header names in the value of the `Access-Control-Expose-Headers`
                                   response header are separated by a comma (",").
@@ -4689,7 +4689,7 @@ spec:
                                         AllowHeaders indicates which HTTP request headers are supported for
                                         accessing the requested resource.
 
-                                        Header names are not case sensitive.
+                                        Header names are not case-sensitive.
 
                                         Multiple header names in the value of the `Access-Control-Allow-Headers`
                                         response header are separated by a comma (",").
@@ -4751,7 +4751,7 @@ spec:
                                         Valid values are any method defined by RFC9110, along with the special
                                         value `*`, which represents all HTTP methods are allowed.
 
-                                        Method names are case sensitive, so these values are also case-sensitive.
+                                        Method names are case-sensitive, so these values are also case-sensitive.
                                         (See https://www.rfc-editor.org/rfc/rfc2616#section-5.1.1)
 
                                         Multiple method names in the value of the `Access-Control-Allow-Methods`
@@ -4900,7 +4900,7 @@ spec:
                                         this additional header will be exposed as part of the response to the
                                         client.
 
-                                        Header names are not case sensitive.
+                                        Header names are not case-sensitive.
 
                                         Multiple header names in the value of the `Access-Control-Expose-Headers`
                                         response header are separated by a comma (",").
@@ -6191,7 +6191,7 @@ spec:
                                   AllowHeaders indicates which HTTP request headers are supported for
                                   accessing the requested resource.
 
-                                  Header names are not case sensitive.
+                                  Header names are not case-sensitive.
 
                                   Multiple header names in the value of the `Access-Control-Allow-Headers`
                                   response header are separated by a comma (",").
@@ -6253,7 +6253,7 @@ spec:
                                   Valid values are any method defined by RFC9110, along with the special
                                   value `*`, which represents all HTTP methods are allowed.
 
-                                  Method names are case sensitive, so these values are also case-sensitive.
+                                  Method names are case-sensitive, so these values are also case-sensitive.
                                   (See https://www.rfc-editor.org/rfc/rfc2616#section-5.1.1)
 
                                   Multiple method names in the value of the `Access-Control-Allow-Methods`
@@ -6402,7 +6402,7 @@ spec:
                                   this additional header will be exposed as part of the response to the
                                   client.
 
-                                  Header names are not case sensitive.
+                                  Header names are not case-sensitive.
 
                                   Multiple header names in the value of the `Access-Control-Expose-Headers`
                                   response header are separated by a comma (",").
