Rectify credentialed requests vs allowCredentials
This is a fix to GEP-1767. It specifies that wildcards are not allowed
in CORS response headers when the request is credentialed (rather than
when the allowCredentials config field is true).

The corresponding GitHub Issue is
https://github.com/kubernetes-sigs/gateway-api/issues/3861.

Signed-off-by: Damian Sawicki <dsawicki@google.com>

--- a/geps/gep-1767/metadata.yaml
+++ b/geps/gep-1767/metadata.yaml
@@ -8,9 +8,11 @@ authors:
   - robscott
   - EyalPazz
   - shaneutt
+  - DamianSawicki
 references:
   - https://github.com/kubernetes-sigs/gateway-api/pull/3435
   - https://github.com/kubernetes-sigs/gateway-api/pull/3637
   - https://github.com/kubernetes-sigs/gateway-api/pull/3656
   - https://github.com/kubernetes-sigs/gateway-api/pull/3668
+  - https://github.com/kubernetes-sigs/gateway-api/pull/4281
 
