--- a/.github/workflows/kal.yml
+++ b/.github/workflows/kal.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Install Golang CI Lint
         run: go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.7.0
       - name: Build KAL
-        run: golangci-lint custom
+        run: golangci-lint custom -v
       - name: run api linter
         run: ./bin/golangci-kube-api-linter run -c ./.golangci-kal.yml ./...
