Adding ingress-nginx welcome guide along with new "getting started" section

--- a/nav.yml
+++ b/nav.yml
@@ -24,9 +24,12 @@ nav:
     - FAQ: faq.md
     - Glossary: concepts/glossary.md
   - Guides:
+    - Getting Started:
+      - Introduction: guides/getting-started/index.md
+      - Deploying a simple Gateway: guides/getting-started/simple-gateway.md
+      - Migrating from Ingress: guides/getting-started/migrating-from-ingress.md
+      - Migrating from Ingress-NGINX: guides/getting-started/migrating-from-ingress-nginx.md
     - User Guides:
-      - Getting started: guides/index.md
-      - Simple Gateway: guides/simple-gateway.md
       - HTTP routing: guides/http-routing.md
       - HTTP redirects and rewrites: guides/http-redirect-rewrite.md
       - HTTP header modifier: guides/http-header-modifier.md
@@ -40,7 +43,6 @@ nav:
       - TLS: guides/tls.md
       - TCP routing: guides/tcp.md
       - gRPC Routing: guides/grpc-routing.md
-      - Migrating from Ingress: guides/migrating-from-ingress.md
       - Backend Protocol Selection: guides/backend-protocol.md
       - Infrastructure attributes: guides/infrastructure.md
     - API Design: guides/api-design.md
