api: Update Gateway status to reflect changes to GEP-1713

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -1374,18 +1374,17 @@ spec:
                 maxItems: 16
                 type: array
                 x-kubernetes-list-type: atomic
-              attachedListeners:
+              attachedListenerSets:
                 description: |-
-                  AttachedListeners represents the total number of ListenerSets that have been
+                  AttachedListenerSets represents the total number of ListenerSets that have been
                   successfully attached to this Gateway.
 
-                  A ListenerSet is successfully attached to a Gateway
-                  when all the following conditions are met :
+                  A ListenerSet is successfully attached to a Gateway when all the following conditions are met:
                   - The ListenerSet is selected by the Gateway's AllowedListeners field
                   - The ListenerSet has a valid ParentRef selecting the Gateway
                   - The ListenerSet's status has the condition "Accepted: true"
 
-                  Uses for this field include troubleshooting AttachedListeners attachment and
+                  Uses for this field include troubleshooting AttachedListenerSets attachment and
                   measuring blast radius/impact of changes to a Gateway.
                 format: int32
                 type: integer
@@ -2977,18 +2976,17 @@ spec:
                 maxItems: 16
                 type: array
                 x-kubernetes-list-type: atomic
-              attachedListeners:
+              attachedListenerSets:
                 description: |-
-                  AttachedListeners represents the total number of ListenerSets that have been
+                  AttachedListenerSets represents the total number of ListenerSets that have been
                   successfully attached to this Gateway.
 
-                  A ListenerSet is successfully attached to a Gateway
-                  when all the following conditions are met :
+                  A ListenerSet is successfully attached to a Gateway when all the following conditions are met:
                   - The ListenerSet is selected by the Gateway's AllowedListeners field
                   - The ListenerSet has a valid ParentRef selecting the Gateway
                   - The ListenerSet's status has the condition "Accepted: true"
 
-                  Uses for this field include troubleshooting AttachedListeners attachment and
+                  Uses for this field include troubleshooting AttachedListenerSets attachment and
                   measuring blast radius/impact of changes to a Gateway.
                 format: int32
                 type: integer
