use fullpath image, remove WaitGroup
Signed-off-by: phuhung273 <phuhung.tranpham@gmail.com>

--- a/conformance/tests/tlsroute-terminate-simple-same-namespace.yaml
+++ b/conformance/tests/tlsroute-terminate-simple-same-namespace.yaml
@@ -69,7 +69,7 @@ spec:
       containers:
       - name: mqtt-backend
         # https://hub.docker.com/_/eclipse-mosquitto
-        image: eclipse-mosquitto:2
+        image: docker.io/eclipse-mosquitto:2
         volumeMounts:
         - name: config
           mountPath: /mosquitto/config/mosquitto.conf
