--- a/conformance/tests/gateway-with-attached-routes.yaml
+++ b/conformance/tests/gateway-with-attached-routes.yaml
@@ -46,6 +46,7 @@ spec:
   - name: http
     port: 80
     protocol: HTTP
+    hostname: "foo.example.com"
     allowedRoutes:
       kinds:
       - kind: HTTPRoute
@@ -78,6 +79,24 @@ metadata:
   name: http-route-3
   namespace: gateway-conformance-infra
 spec:
+  parentRefs:
+  - kind: Gateway
+    name: gateway-with-two-attached-routes
+    namespace: gateway-conformance-infra
+  rules:
+  - backendRefs:
+    - name: infra-backend-v1
+      port: 8080
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: http-route-not-accepted
+  namespace: gateway-conformance-infra
+spec:
+  hostnames:
+  # mismatched hostname here (listener hostname is foo.example.com) triggers NoMatchingListenerHostname reason
+  - "not-accepted.test.com"
   parentRefs:
   - kind: Gateway
     name: gateway-with-two-attached-routes
