fix: correct syntax error in HTTPRouteMatch, GRPCRouteMatch examples
Signed-off-by: opp-13 <john_sungho@naver.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -1740,7 +1740,7 @@ spec:
                               service: "foo"
                               headers:
                             - name: "version"
-                              value "v1"
+                              value: "v1"
 
                           ```
                         properties:
