--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -3384,7 +3384,7 @@ spec:
                           match below will match a HTTP request only if its path\nstarts
                           with `/foo` AND it contains the `version: v1` header:\n\n```\nmatch:\n\n\tpath:\n\t
                           \ value: \"/foo\"\n\theaders:\n\t- name: \"version\"\n\t
-                          \ value \"v1\"\n\n```"
+                          \ value: \"v1\"\n\n```"
                         properties:
                           headers:
                             description: |-
@@ -7590,7 +7590,7 @@ spec:
                           match below will match a HTTP request only if its path\nstarts
                           with `/foo` AND it contains the `version: v1` header:\n\n```\nmatch:\n\n\tpath:\n\t
                           \ value: \"/foo\"\n\theaders:\n\t- name: \"version\"\n\t
-                          \ value \"v1\"\n\n```"
+                          \ value: \"v1\"\n\n```"
                         properties:
                           headers:
                             description: |-
