--- a/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
@@ -1661,7 +1661,7 @@ spec:
                               service: "foo"
                               headers:
                             - name: "version"
-                              value "v1"
+                              value: "v1"
 
                           ```
                         properties:
