GEP-4274: Support for TLSRoute on BackendTLSPolicy

--- a/geps/gep-1897/metadata.yaml
+++ b/geps/gep-1897/metadata.yaml
@@ -18,3 +18,5 @@ relationships:
 extendedBy:
   - number: 4152
     name: Extending TLS Validation in BackendTLSPolicy
+  - number: 4274
+    name: BackendTLSPolicy Support for TLSRoute
