--- a/nav.yml
+++ b/nav.yml
@@ -1,90 +1,92 @@
 nav:
   - Overview:
-    - Introduction: index.md
-    - Concepts:
-      - API Overview: concepts/api-overview.md
-      - Conformance: concepts/conformance.md
-      - Roles and Personas: concepts/roles-and-personas.md
-      - Security Model: concepts/security-model.md
-      - Tools: concepts/tooling.md
-      - Use Cases: concepts/use-cases.md
-      - Versioning: concepts/versioning.md
-    - Service Mesh:
-      - Overview: mesh/index.md
-      - GAMMA Initiative: mesh/gamma.md
-      - Service Facets: mesh/service-facets.md
-    - Implementations:
-        - List: implementations.md
-        - Comparisons:
-          - v1.4: implementations/v1.4.md
-          - v1.3: implementations/v1.3.md
-          - v1.2: implementations/v1.2.md
-          - v1.1: implementations/v1.1.md
-          - v1.0: implementations/v1.0.md
-    - FAQ: faq.md
-    - Glossary: concepts/glossary.md
+      - Introduction: index.md
+      - Concepts:
+          - API Overview: concepts/api-overview.md
+          - Troubleshooting and Status: concepts/troubleshooting.md
+          - Conformance: concepts/conformance.md
+          - Roles and Personas: concepts/roles-and-personas.md
+          - Security Model: concepts/security-model.md
+          - Tools: concepts/tooling.md
+          - Use Cases: concepts/use-cases.md
+          - Versioning: concepts/versioning.md
+          - Traffic Matching: concepts/traffic-matching.md
+      - Service Mesh:
+          - Overview: mesh/index.md
+          - GAMMA Initiative: mesh/gamma.md
+          - Service Facets: mesh/service-facets.md
+      - Implementations:
+          - List: implementations.md
+          - Comparisons:
+              - v1.4: implementations/v1.4.md
+              - v1.3: implementations/v1.3.md
+              - v1.2: implementations/v1.2.md
+              - v1.1: implementations/v1.1.md
+              - v1.0: implementations/v1.0.md
+      - FAQ: faq.md
+      - Glossary: concepts/glossary.md
   - Guides:
-    - Getting Started:
-      - Introduction: guides/getting-started/index.md
-      - Deploying a simple Gateway: guides/getting-started/simple-gateway.md
-      - Migrating from Ingress: guides/getting-started/migrating-from-ingress.md
-      - Migrating from Ingress-NGINX: guides/getting-started/migrating-from-ingress-nginx.md
-    - User Guides:
-      - HTTP routing: guides/http-routing.md
-      - HTTP redirects and rewrites: guides/http-redirect-rewrite.md
-      - HTTP header modifier: guides/http-header-modifier.md
-      - HTTP traffic splitting: guides/traffic-splitting.md
-      - HTTP request mirroring: guides/http-request-mirroring.md
-      - HTTP query parameter matching: guides/http-query-param-matching.md
-      - HTTP method matching: guides/http-method-matching.md
-      - HTTP timeouts: guides/http-timeouts.md
-      - HTTP CORS: guides/http-cors.md
-      - Cross-Namespace routing: guides/multiple-ns.md
-      - TLS: guides/tls.md
-      - TCP routing: guides/tcp.md
-      - gRPC Routing: guides/grpc-routing.md
-      - Backend Protocol Selection: guides/backend-protocol.md
-      - Infrastructure attributes: guides/infrastructure.md
-    - API Design: guides/api-design.md
-    - CRD Management: guides/crd-management.md
-    - Implementer's Guide: guides/implementers.md
+      - Getting Started:
+          - Introduction: guides/getting-started/index.md
+          - Deploying a simple Gateway: guides/getting-started/simple-gateway.md
+          - Migrating from Ingress: guides/getting-started/migrating-from-ingress.md
+          - Migrating from Ingress-NGINX: guides/getting-started/migrating-from-ingress-nginx.md
+      - User Guides:
+          - HTTP routing: guides/http-routing.md
+          - HTTP redirects and rewrites: guides/http-redirect-rewrite.md
+          - HTTP header modifier: guides/http-header-modifier.md
+          - HTTP traffic splitting: guides/traffic-splitting.md
+          - HTTP request mirroring: guides/http-request-mirroring.md
+          - HTTP query parameter matching: guides/http-query-param-matching.md
+          - HTTP method matching: guides/http-method-matching.md
+          - HTTP timeouts: guides/http-timeouts.md
+          - HTTP CORS: guides/http-cors.md
+          - Cross-Namespace routing: guides/multiple-ns.md
+          - TLS: guides/tls.md
+          - TCP routing: guides/tcp.md
+          - gRPC Routing: guides/grpc-routing.md
+          - Backend Protocol Selection: guides/backend-protocol.md
+          - Infrastructure attributes: guides/infrastructure.md
+      - API Design: guides/api-design.md
+      - CRD Management: guides/crd-management.md
+      - Implementer's Guide: guides/implementers.md
   - Reference:
-    - API Types:
-      - Gateway: api-types/gateway.md
-      - GatewayClass: api-types/gatewayclass.md
-      - GRPCRoute: api-types/grpcroute.md
-      - HTTPRoute: api-types/httproute.md
-      - Policy:
-        - BackendTLSPolicy: api-types/backendtlspolicy.md
-        - BackendTrafficPolicy: api-types/backendtrafficpolicy.md
-      - ReferenceGrant: api-types/referencegrant.md
-    - API specification:
-      - Development:
-        - Standard: reference/spec.md
-        - Experimental: reference/specx.md
-      - v1.4:
-        - Standard: reference/1.4/spec.md
-        - Experimental: reference/1.4/specx.md
-      - v1.3:
-        - Standard: reference/1.3/spec.md
-        - Experimental: reference/1.3/specx.md
-    - Policy Attachment: reference/policy-attachment.md
+      - API Types:
+          - Gateway: api-types/gateway.md
+          - GatewayClass: api-types/gatewayclass.md
+          - GRPCRoute: api-types/grpcroute.md
+          - HTTPRoute: api-types/httproute.md
+          - Policy:
+              - BackendTLSPolicy: api-types/backendtlspolicy.md
+              - BackendTrafficPolicy: api-types/backendtrafficpolicy.md
+          - ReferenceGrant: api-types/referencegrant.md
+      - API specification:
+          - Development:
+              - Standard: reference/spec.md
+              - Experimental: reference/specx.md
+          - v1.4:
+              - Standard: reference/1.4/spec.md
+              - Experimental: reference/1.4/specx.md
+          - v1.3:
+              - Standard: reference/1.3/spec.md
+              - Experimental: reference/1.3/specx.md
+      - Policy Attachment: reference/policy-attachment.md
   - Enhancements:
-    - Overview: geps/overview.md
-    - List: geps/landing/tab.md
-    - By State:
-      - Standard: geps/landing/standard.md
-      - Memorandum: geps/landing/memorandum.md
-      - Experimental: geps/landing/experimental.md
-      - Implementable: geps/landing/implementable.md
-      - Provisional: geps/landing/provisional.md    
+      - Overview: geps/overview.md
+      - List: geps/landing/tab.md
+      - By State:
+          - Standard: geps/landing/standard.md
+          - Memorandum: geps/landing/memorandum.md
+          - Experimental: geps/landing/experimental.md
+          - Implementable: geps/landing/implementable.md
+          - Provisional: geps/landing/provisional.md
   - Contributing:
-    - How to Get Involved: contributing/index.md
-    - Developer Guide: contributing/devguide.md
-    - Documentation Style Guide: contributing/style-guide.md
-    - Enhancement Requests: contributing/enhancement-requests.md
-    - Release Cycle: contributing/release-cycle.md
-    - Contributor Ladder: contributing/contributor-ladder.md
+      - How to Get Involved: contributing/index.md
+      - Developer Guide: contributing/devguide.md
+      - Documentation Style Guide: contributing/style-guide.md
+      - Enhancement Requests: contributing/enhancement-requests.md
+      - Release Cycle: contributing/release-cycle.md
+      - Contributor Ladder: contributing/contributor-ladder.md
 not_in_nav: |
   /blog/*
   /geps/gep-696/*
